<resources>
    <string name="app_name_full">QR코드 체크인 도우미 - 전자출입명부 자동 오픈 앱</string>
    <string name="app_name_partial">QR 체크인 도우미</string>
    <string name="noti_channel_id">QR 체크인 위젯</string>
    <string name="menu_title_developer_info">개발자 정보</string>
    <string name="menu_title_logout">로그아웃</string>
    <string name="menu_title_additional_function">추가 기능</string>
    <string name="nav_function_title">기능 설정</string>
    <string name="nav_function_lock_screen_title">앱 잠금화면 QR 인증 화면 노출</string>
    <string name="nav_function_widget">앱 종료 시 위젯 노출</string>
    <string name="nav_push_title">푸시 알림</string>
    <string name="nav_app_info_title">앱 정보</string>
    <string name="nav_app_info_version_title">버전 정보</string>
    <string name="nav_app_info_delete_ads_title">광고 제거</string>
    <string name="nav_app_info_delete_ads_on">켜짐</string>
    <string name="nav_app_info_delete_ads_off">꺼짐</string>
    <string name="nav_app_info_review_title">응원의 리뷰 작성하기</string>
    <string name="nav_app_info_language_title">언어 설정</string>
    <string name="nav_app_info_language_value">한국어</string>
    <string name="nav_app_info_share">친구에게 앱 공유하기</string>

    <string name="service_notification_text">앱 잠금화면, 위젯 기능 사용 중입니다.</string>
    <string name="permission_title">권한 요청</string>
    <string name="permission_message">바로가기 위젯을 사용하기 위해 다른 앱 위에 표시하기 권한이 필요합니다.\n확인을 누를 시 설정창으로 이동합니다.</string>
    <string name="developer_info_title">개발자 정보</string>
    <string name="developer_info_message">개발자 이름 : 서창연\n이메일 주소 : scy7351@gmail.com</string>
    <string name="floating_button_title">QR인증</string>
    <string name="app_refresh_title">앱 새로고침 안내</string>
    <string name="app_refresh_message">로그인 정보가 변경되어 앱을 새로고침합니다. 다시 접속해주세요.</string>
    <string name="nav_qr_fragment_title">QR 인증</string>
    <string name="nav_map_fragment_title">방문 기록</string>
    <string name="menu_title_drop_location">방문 기록 삭제하기</string>

    <string name="loading">주소를 찾을 수 없습니다</string>
    <string formatted="false" name="address_format">%s %s %s</string>

    <string name="location_checkin_complete">체크인이 완료되었습니다. 주소 : </string>
    <string name="unavailable_geocoding">주소를 불러올 수 없습니다. 잠시 뒤 다시 시도해주세요.</string>
    <string name="illegal_parameter">위/경도 좌표가 잘못되었습니다. 앱 종료 후 다시 시도해주세요.</string>
    <string name="no_address_found">해당 좌표의 주소를 찾을 수 없습니다.</string>
    <string name="geocoder_unavailable_title">이용 불가 안내</string>
    <string name="geocoder_unavailable_message">주소 찾기 기능이 제공되지 않는 기기입니다. 방문 기록 검색 기능을 사용할 수 없습니다.</string>
    <string name="permission_denied_title">권한 거부 안내</string>
    <string name="permission_denied_message">위치 권한이 거부되었습니다. 방문 기록 확인을 위해 권한을 동의해 주세요!</string>
    <string name="permission_goto_settings">설정으로 이동하기</string>
    <string name="nav_function_auto_checkin">자동 체크인 기능 사용</string>
    <string name="nav_app_info_open_help">앱 재설정</string>
    <string name="intro_floating_action_title">다음으로</string>
    <string name="skip_initialize_title">기본 설정 건너뛰기</string>
    <string name="skip_initialize_message">기본 설정을 완료하면 보다 편리하게 앱을 사용할 수 있습니다. 그래도 건너뛰시겠습니까?</string>
    <string name="intro_permission_title_text">앱 사용을 위해 권한이 필요해요</string>
    <string name="intro_permission_subtitle_text">아래의 권한 사용에 동의해주세요!\n권한에 동의하지 않을 시 일부 기능을 사용하지 못할 수 있습니다.</string>
    <string name="intro_permission_dialog_title">권한 동의 안내</string>
    <string name="intro_permisison_dialog_message">아직 동의하지 않은 권한이 있어요! 권한에 동의하지 않을 시 일부 기능을 사용하지 못할 수 있습니다.</string>
    <string name="psv_overlay_subtitle">위젯 버튼을 띄우기 위해서 해당 권한이 필요합니다.</string>
    <string name="psv_overlay_title">다른 앱 위에 표시하기 권한</string>
    <string name="psv_location_title">위치 정보 접근 권한</string>
    <string name="psv_location_subtitle">GPS 사용하여 현재 위치를 검색해 QR 체크인 장소를 기록합니다.</string>
    <string name="toolbar_menu_skip_initialize_title">건너뛰기</string>
    <string name="skip_uncomplete_initialize_title">미완료 안내</string>
    <string name="skip_uncomplete_initialize_message">설정이 아직 완료되지 않았습니다. 그래도 넘어가시겠습니까?</string>
    <string name="intro_other_setting_title">빅스비 버튼으로 앱 실행하기</string>
    <string name="bixby_step_2_subtitle">유용한 기능 설정창의 측면 버튼 혹은 빅스비 버튼 항목을 클릭해주세요</string>
    <string name="bixby_step_2_title">측면 버튼 설정 변경하기</string>
    <string name="bixby_step_1_title">유용한 기능 설정화면 진입하기</string>
    <string name="bixby_step_1_subtitle">설정 화면의 유용한 기능 버튼을 클릭해 유용한 기능 설정창으로 진입해주세요.</string>
    <string name="bixby_step_3_title">측면 버튼을 눌러 앱을 실행하기</string>
    <string name="bixby_step_3_subtitle">측면 버튼 혹은 빅스비 버튼을 눌렀을 때 QR 체크인 앱을 실행하도록 설정해주세요.</string>
    <string name="bixby_step_4_title">빅스비 버튼을 눌러 확인하기</string>
    <string name="bixby_step_4_subtitle">빅스비 버튼을 눌러서 앱이 정상적으로 실행되는지 확인하세요</string>
    <string name="intro_floating_next_title">다음으로</string>
    <string name="intro_floating_other_title">설정으로 이동하기</string>
    <string name="intro_floating_finalize_title">완료하기</string>
    <string name="nav_app_info_set_launcher_icon">앱 아이콘 설정하기</string>
    <string name="icon_light_title">일반 아이콘</string>
    <string name="icon_dark_title">다크 테마 아이콘</string>
    <string name="icon_light_desc">밝은 색감의 아이콘을 사용해 산뜻한 느낌을 줍니다.</string>
    <string name="icon_dark_desc">어두운 배경의 아이콘과 색 대비를 통해 눈의 피로를 풀어줍니다.</string>
    <string name="intro_qr_checkin_setting_title">QR 체크인 방법을 선택해주세요</string>
    <string name="intro_qr_checkin_setting_subtitle">QR 체크인을 위해 사용할 플랫폼(카카오톡, 네이버)을 선택해 주세요. QR 체크인 방법은 앱 사용 중 언제든 변경할 수 있습니다.</string>
    <string name="intro_qr_checkin_setting_kakao_title">카카오 QR 체크인</string>
    <string name="intro_qr_checkin_setting_kakao_subtitle">카카오 계정을 사용하여 QR 체크인합니다</string>
    <string name="intro_qr_checkin_setting_naver_title">네이버 QR 체크인</string>
    <string name="intro_qr_checkin_setting_naver_subtitle">네이버 계정을 사용하여 QR 체크인합니다</string>
    <string name="lock_screen_kakao_view_desc">QR 체크인을 위해 카카오톡 앱을 실행합니다</string>
    <string name="lock_screen_kakao_btn">카카오 QR 체크인</string>
    <string name="nav_app_info_set_qr_checkin_type">QR 체크인 방법</string>
    <string name="dialog_app_icon_select_title">앱 아이콘을 선택하세요!</string>
    <string name="toolbar_menu_theme">앱 테마 설정</string>
    <string name="theme_select_dialog_title">앱 테마 선택</string>
    <string name="theme_select_dialog_light">밝게</string>
    <string name="theme_select_dialog_dark">어둡게</string>
    <string name="theme_select_dialog_system">시스템 테마</string>
</resources>