<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_menu_info"
        android:title="@string/menu_title_additional_function"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:orderInCategory="0"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/toolbar_menu_developer_info"
                android:title="@string/menu_title_developer_info"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/toolbar_menu_logout"
                android:title="@string/menu_title_logout"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>