<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="parentViewModel"
            type="com.skfo763.qrcheckin.intro.viewmodel.IntroViewModel" />
        <variable
            name="viewModel"
            type="com.skfo763.qrcheckin.intro.viewmodel.OtherSettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.skfo763.component.youtubeplayer.YouTubePlayerView
            android:id="@+id/intro_other_youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_height="240dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/intro_other_youtube_player_view"
            app:fragment="com.skfo763.qrcheckin.intro.fragment.OtherSettingsFragment" />

        <ScrollView
            android:id="@+id/intro_other_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/intro_other_youtube_player_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/intro_other_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_other_setting_title"
                    android:textSize="20sp"
                    android:textColor="#2B95FF"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toTopOf="@id/intro_bixby_step_1"/>

                <com.skfo763.component.bixbysetting.NumberIconTextView
                    android:id="@+id/intro_bixby_step_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="80dp"
                    app:num_icon_tv_number="1"
                    app:num_icon_tv_title="@string/bixby_step_1_title"
                    app:num_icon_tv_subtitle="@string/bixby_step_1_subtitle"/>

                <com.skfo763.component.bixbysetting.NumberIconTextView
                    android:id="@+id/intro_bixby_step_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="80dp"
                    app:num_icon_tv_number="2"
                    app:num_icon_tv_title="@string/bixby_step_2_title"
                    app:num_icon_tv_subtitle="@string/bixby_step_2_subtitle" />

                <com.skfo763.component.bixbysetting.NumberIconTextView
                    android:id="@+id/intro_bixby_step_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="80dp"
                    app:num_icon_tv_number="3"
                    app:num_icon_tv_title="@string/bixby_step_3_title"
                    app:num_icon_tv_subtitle="@string/bixby_step_3_subtitle" />

                <com.skfo763.component.bixbysetting.NumberIconTextView
                    android:id="@+id/intro_bixby_step_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="80dp"
                    app:num_icon_tv_number="4"
                    app:num_icon_tv_title="@string/bixby_step_4_title"
                    app:num_icon_tv_subtitle="@string/bixby_step_4_subtitle" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/intro_other_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:theme="@style/AppTheme"
            android:text="@string/intro_floating_other_title"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#BEDFFF"
            app:icon="@drawable/ic_baseline_settings_24"
            app:iconPadding="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
